--- a/front/index.html
+++ b/front/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/dist/styles.css" rel="stylesheet" />
+    <!-- <link href="/dist/styles.css" rel="stylesheet" /> -->
     <title>Document</title>
   </head>
   <body></body>
